@@ -1,3 +1,9 @@
+2011-05-07  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/standard.c (fn_asin, fn_asinh): Fix calculation for complex
+	arguments. Make sure that asin(sin(z))==z.
+	Bug #2879772.
+	
 2011-04-25  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/mouse.c (apply_zoom):  Prevent double-free of custom font for tic
